day3/cm-vol-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cm-vol-pod
spec:
  containers:
  - image: nginx
    name: web1
    volumeMounts:
    - mountPath: /data/123
      name: cm-vol
  volumes:
  - name: cm-vol
    configMap:
      name: my-configmap
