day3/nfs-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: nfs
  name: nfs-pod
spec:
  containers:
  - image: nginx
    name: web1
    volumeMounts:
    - mountPath: /usr/share/nginx/html
      name: nfs-vol
  volumes:
  - name: nfs-vol
    nfs:
      server: 192.168.1.125
      path: /var/nfs-share
