day3/nfs-pvc-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: nfs
  name: nfs-pvc-pod
spec:
  nodeName: worker1
  containers:
  - image: nginx
    name: web1
    volumeMounts:
    - mountPath: /usr/share/nginx/html
      name: pv-storage
  volumes:
  - name: pv-storage
    persistentVolumeClaim:
      claimName: nfs-pvc
