day3/ubuntu-enhanced.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu-enhanced
spec:
  volumes:
    - name: update-vol
      configMap:
        name: update-cm
  containers:
  - image: ubuntu
    name: ubuntu-pod
    command: ['sh', '-c' ,'bash /tmp/update.sh; tail -F /tmp/test']
    volumeMounts:
    - name: update-vol
      mountPath: /tmp
